--- a/assignment3.ipynb
+++ b/assignment3.ipynb
@@ -20,7 +20,17 @@
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers\n",
-    "from tensorflow.keras import models\n"
+    "from tensorflow.keras import models\n",
+    "\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "import pickle\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import *\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n"
    ]
   },
   {
@@ -65,6 +75,192 @@
     "        fname =  folder_train + names[k] + \".tif\"\n",
     "        img = cv2.imread(fname)\n",
     "        ax[i,j].imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b410afe0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c75ff210",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the training data into a DataFrame named 'train'. \n",
+    "# Print the shape of the resulting DataFrame. \n",
+    "\n",
+    "train = pd.read_csv(f'../input/histopathologic-cancer-detection/train_labels.csv', dtype=str)\n",
+    "\n",
+    "print('Training Set Size:', train.shape)\n",
+    "\n",
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d37ed84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Label distribution\n",
+    "\n",
+    "(train.label.value_counts() / len(train)).to_frame().sort_index().T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52a46d8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Sample images of original dataset\n",
+    "\n",
+    "train_path = \"../input/histopathologic-cancer-detection/train\"\n",
+    "print('Training Images:', len(os.listdir(train_path)))\n",
+    "\n",
+    "sample = train.sample(n=16).reset_index()\n",
+    "\n",
+    "plt.figure(figsize=(8,8))\n",
+    "\n",
+    "for i, row in sample.iterrows():\n",
+    "\n",
+    "    img = mpimg.imread(f'../input/histopathologic-cancer-detection/train/{row.id}')    \n",
+    "    label = row.label\n",
+    "\n",
+    "    plt.subplot(4,4,i+1)\n",
+    "    plt.imshow(img)\n",
+    "    plt.text(0, -5, f'Class {label}', color='k')\n",
+    "        \n",
+    "    plt.axis('off')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "600bd82e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example of images for Class = 1\n",
+    "img_names = train[train['label']=='1']['id'][:16]\n",
+    "\n",
+    "plt.figure(figsize=[8,8])\n",
+    "i = 1\n",
+    "for img_name in img_names:\n",
+    "    img = mpimg.imread(\"../input/histopathologic-cancer-detection/train/%s\" % img_name)[...,[2, 1, 0]] \n",
+    "    plt.subplot(4, 4, i)\n",
+    "    plt.imshow(img)\n",
+    "    plt.text(0, -5, f'Class 1', color='k')\n",
+    "    i += 1\n",
+    "    plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dff58cea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example of images for Class = 0\n",
+    "img_names0 = train[train['label']==\"0\"]['id'][:16]\n",
+    "\n",
+    "plt.figure(figsize=[8,8])\n",
+    "i = 1\n",
+    "for img_name0 in img_names0:\n",
+    "    img = mpimg.imread(\"../input/histopathologic-cancer-detection/train/%s\" % img_name0)[...,[2, 1, 0]] \n",
+    "    plt.subplot(4, 4, i)\n",
+    "    plt.imshow(img)\n",
+    "    plt.text(0, -5, f'Class 0', color='k')\n",
+    "    i += 1\n",
+    "    plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3425250d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data generators\n",
+    "#Using original dataset\n",
+    "RANDOM_SEED = 1982\n",
+    "train_df, valid_df = train_test_split(train, test_size=0.2, random_state=RANDOM_SEED, stratify=train.label)\n",
+    "\n",
+    "print(train_df.shape)\n",
+    "print(valid_df.shape)\n",
+    "\n",
+    "# Create image data generators for both the training set and the validation set. \n",
+    "# Use the data generators to scale the pixel values by a factor of 1/255. \n",
+    "\n",
+    "train_datagen = ImageDataGenerator(\n",
+    "    rescale=1./255,\n",
+    "    vertical_flip = True,\n",
+    "    horizontal_flip = True,\n",
+    "    rotation_range=90,\n",
+    "    zoom_range=0.2, \n",
+    "    width_shift_range=0.2,\n",
+    "    height_shift_range=0.2,\n",
+    "    shear_range=0.2,\n",
+    "    channel_shift_range=0.1,\n",
+    "    fill_mode='nearest')\n",
+    "\n",
+    "valid_datagen = ImageDataGenerator(rescale=1/255)\n",
+    "\n",
+    "# Complete the code for the data loaders below. \n",
+    "\n",
+    "BATCH_SIZE = 64\n",
+    "\n",
+    "train_loader = train_datagen.flow_from_dataframe(\n",
+    "    dataframe = train_df,\n",
+    "    directory = train_path,\n",
+    "    x_col = 'id',\n",
+    "    y_col = 'label',\n",
+    "    batch_size = BATCH_SIZE,\n",
+    "    seed = 1,\n",
+    "    shuffle = True,\n",
+    "    class_mode = 'categorical',\n",
+    "    target_size = (96,96)\n",
+    ")\n",
+    "\n",
+    "valid_loader = valid_datagen.flow_from_dataframe(\n",
+    "    dataframe = valid_df,\n",
+    "    directory = train_path,\n",
+    "    x_col = 'id',\n",
+    "    y_col = 'label',\n",
+    "    batch_size = BATCH_SIZE,\n",
+    "    seed = 1,\n",
+    "    shuffle = True,\n",
+    "    class_mode = 'categorical',\n",
+    "    target_size = (96,96)\n",
+    ")\n",
+    "\n",
+    "#Look at some augmented images\n",
+    "def plotImages(images_arr):\n",
+    "    fig, axes = plt.subplots(3, 5, figsize=(10,10))\n",
+    "    axes = axes.flatten()\n",
+    "    for img, ax in zip( images_arr, axes):\n",
+    "        ax.imshow(img)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "    \n",
+    "    \n",
+    "augmented_images = [train_loader[0][0][0] for i in range(15)]\n",
+    "plotImages(augmented_images)"
    ]
   }
  ],
