--- a/assignment3.ipynb
+++ b/assignment3.ipynb
@@ -27,11 +27,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6a3ce405",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "#Set Page Width to 100%\n",
+    "from IPython.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
+    "\n",
     "#Display Sample Images"
    ]
   },
@@ -279,7 +296,7 @@
     "\n",
     "#complex_optimizer = Adam(learning_rate=0.0001)\n",
     "#basic_model.compile(loss='binary_crossentropy', optimizer=complex_optimizer, metrics=['accuracy'])\n",
-    "basic_model.compile(loss='binary_crossentropy', optimizer=Adam(learning_rate=0.0001), metrics=['accuracy'])"
+    "basic_model.compile(tf.keras.optimizers.loss='binary_crossentropy', optimizer=tf.keras.optimizers.Adam(learning_rate=0.0001), metrics=['accuracy'])"
    ]
   },
   {
@@ -303,21 +320,21 @@
    "source": [
     "#Train models\n",
     "\n",
-    "STEP_SIZE_TRAIN=train_generator.n//train_generator.batch_size\n",
-    "STEP_SIZE_VALID=validation_generator.n//validation_generator.batch_size\n",
+    "#STEP_SIZE_TRAIN=train_generator.n//train_generator.batch_size\n",
+    "#STEP_SIZE_VALID=validation_generator.n//validation_generator.batch_size\n",
     "\n",
     "basic_history = basic_model.fit(generator_train_set,\n",
     "                    epochs = 20 , \n",
-    "                    steps_per_epoch=STEP_SIZE_TRAIN,\n",
+    "                    steps_per_epoch=None,\n",
     "                    validation_data = generator_validation_set,\n",
-    "                    validation_steps=STEP_SIZE_VALID)\n",
+    "                    validation_steps=None)\n",
     "\n",
     "\n",
     "complex_history = complex_model.fit(generator_train_set,\n",
     "                    epochs = 20 , \n",
-    "                    steps_per_epoch=STEP_SIZE_TRAIN,\n",
+    "                    steps_per_epoch=SNone,\n",
     "                    validation_data = generator_validation_set,\n",
-    "                    validation_steps=STEP_SIZE_VALID)"
+    "                    validation_steps=None)"
    ]
   },
   {
@@ -335,9 +352,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Compare Results\n",
+    "#Basic Model\n",
+    "basic_model_accuracy = basic_history.history['accuracy']\n",
+    "basic_model_val_acc = basic_history.history['val_accuracy']\n",
+    "basic_model_loss = basic_history.history['loss']\n",
+    "basic_model_val_loss = basic_history.history['val_loss']\n",
     "\n",
-    "Plots"
+    "\n",
+    "basic_epochs_range = range(20)\n",
+    "\n",
+    "plt.figure(figsize=(15, 15))\n",
+    "plt.subplot(2, 2, 1)\n",
+    "plt.plot(basic_epochs_range, basic_model_accuracy, label='Training Accuracy')\n",
+    "plt.plot(basic_epochs_range, basic_model_val_acc, label='Validation Accuracy')\n",
+    "plt.legend(loc='lower right')\n",
+    "plt.title('Basic Model Training and Validation Accuracy')\n",
+    "\n",
+    "plt.subplot(2, 2, 2)\n",
+    "plt.plot(basic_epochs_range, basic_model_loss, label='Training Loss')\n",
+    "plt.plot(basic_epochs_range, basic_model_val_loss, label='Validation Loss')\n",
+    "plt.legend(loc='upper right')\n",
+    "plt.title('BAsic Model Training and Validation Loss')\n",
+    "plt.show()\n",
+    "\n",
+    "#Complex Model\n",
+    "complex_model_accuracy = complex_history.history['accuracy']\n",
+    "complex_model_val_acc = complex_history.history['val_accuracy']\n",
+    "complex_model_loss = complex_history.history['loss']\n",
+    "complex_model_val_loss = complex_history.history['val_loss']\n",
+    "\n",
+    "complex_epochs_range = range(20)\n",
+    "\n",
+    "plt.figure(figsize=(15, 15))\n",
+    "plt.subplot(2, 2, 1)\n",
+    "plt.plot(complex_epochs_range, complex_model_accuracy, label='Training Accuracy')\n",
+    "plt.plot(complex_epochs_range, complex_model_val_acc, label='Validation Accuracy')\n",
+    "plt.legend(loc='lower right')\n",
+    "plt.title('Complex Model Training and Validation Accuracy')\n",
+    "\n",
+    "plt.subplot(2, 2, 2)\n",
+    "plt.plot(complex_epochs_range, complex_model_loss, label='Training Loss')\n",
+    "plt.plot(complex_epochs_range, complex_model_val_loss, label='Validation Loss')\n",
+    "plt.legend(loc='upper right')\n",
+    "plt.title('Complex Model Training and Validation Loss')\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
