--- a/assignment3_final.ipynb
+++ b/assignment3_final.ipynb
@@ -16,7 +16,7 @@
     "### Description\n",
     "\n",
     " \n",
-    "This project is a binary image classification problem.  The goal of this project is to develop a convolutional nueral network model that can accurately identify metastatic cancer patches in an image.  The images are provided by the Kaggle Histopathologic Cancer Detection Competition and located at https://www.kaggle.com/competitions/histopathologic-cancer-detection/data.  Miltilayer convolutional nueral networks will be deleloped, trained and validated.  The best model will then be used to predict the labels on the test images.  \n",
+    "This project is a binary image classification problem.  The goal of this project is to develop a convolutional neural network model that can accurately identify metastatic cancer patches in an image.  The images are provided by the Kaggle Histopathologic Cancer Detection Competition and located at https://www.kaggle.com/competitions/histopathologic-cancer-detection/data.  Miltilayer convolutional neural networks will be developed, trained and validated.  The best model will then be used to predict the labels on the test images.  \n",
     "\n",
     "**Natural Language Processing (NLP)**\n",
     "\n",
@@ -188,7 +188,7 @@
    "source": [
     "### Data\n",
     "\n",
-    "See Images 1 and 2 for examples of negative and positive instances, respectively.  A review of the images, image ids and  and ground truth labels showed no anomolous cases."
+    "See Images 1 and 2 for examples of negative and positive instances, respectively.  A brief review of the images, image ids and ground truth labels showed no anomolous cases. It is assumed that the provided data set is in proper order."
    ]
   },
   {
@@ -238,7 +238,7 @@
    "source": [
     "### EDA\n",
     "\n",
-    "As shown in Chart 1, 59.5% of the training examples are negative while 40.5% positive.  This imbalance could result in biased training so the training set is rebalanced to a 50-50 split. Plot 2 shows the new distribution to be used as the training set.  As noted above, a review of the images, image ids and labels revealed no anomolies.  No addtional data cleansing or adjustments are required.\n"
+    "As shown in Chart 1, 59.5% of the training examples are negative while 40.5% positive.  This imbalance could result in biased training so the training set is rebalanced to a 50-50 split. Plot 2 shows the new distribution to be used as the training set.  As noted above, a review of the images, image ids and labels revealed no anomolies.  No additional data cleansing or adjustments are required.\n"
    ]
   },
   {
@@ -377,9 +377,11 @@
     "\n",
     "***Model Architecture***\n",
     "\n",
-    "The core of the models will be the Convolutional layers.  The Convolutional model is extremely adapt at processing images to various levels.  Multiple Convolution layers (3) will be used in an effort to increase accuracy. The Convolutional layers are braketed by Batch Normalization and Max pooling layers.  These layers are added to improve both model performance and efficiency.  Relu activation will be used in the first three Activations layers as this method is best suited for this type of analysis.  A Dense layer is placed in front of the final Activation layer.  The final Activation layer will use sigmoid activation for classification purposes.\n",
+    "The core of the models will be the Convolutional layers.  The Convolutional model is extremely adapt at processing images to various levels.  Multiple Convolution layers (3) will be used in an effort to increase accuracy. The Convolutional layers are bracketed by Batch Normalization and Max pooling layers.  These layers are added to improve both model performance and efficiency.  Relu activation will be used in the first three Activation layers as this method is best suited for this type of analysis.  A Dense layer is placed in front of the final Activation layer.  The final Activation layer will use sigmoid activation for classification purposes.\n",
     "\n",
-    "While designing the model, the question arose as where to place the Batch Normalization layers.  With that in mind, it was determined that two different models, with the Batch Normalization layers placed in different places would be a good basis for model comparison.  The first model has the Batch Normalization layers placed before the Activation layers.  The second model has the Batch Normalization layers placed after the Activation layers.  The models will be compared to determine the optimal location for the Batch Normalization layers. "
+    "While designing the model, the question arose as where to place the Batch Normalization layers.  With that in mind, it was determined that two different models, with the Batch Normalization layers placed in different places would be a good basis for model comparison.\n",
+    "\n",
+    "The first model has the Batch Normalization layers placed before the Activation layers.  The second model has the Batch Normalization layers placed after the Activation layers.  The models will be compared to determine the optimal location for the Batch Normalization layers. "
    ]
   },
   {
@@ -851,13 +853,13 @@
     "|After|.8206|.8070|\n",
     "\n",
     "\n",
-    "Plots 1 thru 4 provide a view of the training accuracy and loss metrics between the models with the Batch Normalization layer berfore and after the activation layers.  \n",
+    "Plots 1 thru 4 provide a view of the training accuracy and loss metrics between the models with the Batch Normalization layer before and after the activation layers.  \n",
     "\n",
-    "Table 1 indicates the before model showed had an accuracy of 84.44%, 2.36% better then the after model at 82.06%\n",
+    "Table 1 indicates that the before model has an accuracy of 84.44%, 2.36% better then the after model at 82.06%\n",
     "\n",
-    "However, when looking closely at the plots at around the 10th epoch, the before model's training and validation accuracy begin to diverge, while the after model's accuracies trends continue to track and converge.  THis is an indication of potential overfitting in in the before model.\n",
+    "However, when looking closely at the plots, at around the 10th epoch, the before model's training and validation accuracy begin to diverge, while the after model's accuracy trend continues to track and converge.  This is an indication of potential overfitting in the before model.\n",
     "\n",
-    "The loss plots show a similiar pattern with the training and validation loss diverging while in the before model while the after model's losses track and continue to exhibit a converging pattern.  Again, another indication of overfitting of the before model.\n",
+    "The loss plots show a similiar pattern with the training and validation loss diverging in the before model while the after model's losses track and continue to exhibit a converging pattern.  Again, another indication of overfitting of the before model.\n",
     " \n",
     "Taking these two observations together it appears that the before model is showing signs of overfitting while the after model is stable and continues to improve.  The implication being that placing the Batch Normalization layer after the Activation layer aided in protecting the after model from overfitting. In the end analysis, given the marginal difference in accuracy between the models, and the fact the the before model shows signs of overfitting, the after model is deemed the better of the two.\n",
     "\n",
@@ -1381,11 +1383,11 @@
     "\n",
     "As can be seen in Plot 5 and Table 2, 'Momentum vs Accuracy’, all 4 momentum levels reach similar levels of accuracy.  Model 3, momentum = .5, performed best with an accuracy of 84.31%.  The worst performer was Model 2, momentum = .75, with accuracy of 83.75%.  When comparing models strictly from an accuracy perspective there is no appreciable difference between models.  The best and worst performers were separated by only .56%, essentially no difference.\n",
     "\n",
-    "However, it’s how the models got there that is interesting.  Plot 5 shows that Model 4, momentum = .25 exhibited the least amount of variability through its trajectory.  On the other hand, Model 1, momentum = .99 varied wildly throughout its path.  This is not unexpected as the larger momentum model would be expected to ‘bounce’ around more than the lower momentum models.\n",
+    "However, it’s how the models got there that is interesting.  Plot 5 shows that Model 4, momentum = .25, exhibited the least amount of variability through its trajectory.  On the other hand, Model 1, momentum = .99, varied wildly throughout its path.  This is not unexpected as the larger momentum model would be expected to ‘bounce’ more than the lower momentum models.\n",
     "\n",
-    "Plot 6, Validation Accuracy, more clearly details how the higher momentums impact the loss trajectory.  As expected, as the momentum of the models degreased, so did the variation in the loss path.\n",
+    "Plot 6, Validation Accuracy, more clearly details how the higher momentums impact the loss trajectory.  As expected, as the momentum of the models decreased, so did the variation in the loss path.\n",
     "\n",
-    "Given the marginal difference in accuracy in conjunction with the variation in the accuracy trajectories, the data shows that working with a lower momentum provides a much more stable model in terms of accuracy and loss.  Model 4, momentum = .25 is the preferred model.  "
+    "Given the marginal difference in accuracy in conjunction with the variation in the accuracy trajectories, the data shows that working with a lower momentum provides a more stable model in terms of accuracy and loss.  Model 4, momentum = .25 is the preferred model.  "
    ]
   },
   {
@@ -1405,13 +1407,14 @@
     "\n",
     "Over 15 epochs, comparisons of the before and after models showed marginal accuracy and loss differences.  The before model performed slightly better with its final accuracy 2.38% better at 84.44%, then the after model at 80.20%.\n",
     "\n",
-    "However as outlined above, the before model began to show signs of overfitting at around the 10th epoch, while the after model did not.  Based on the analysis and discussion above, the conclusion is that placing the Batch Normalization layer after the Activation layer proved to be beneficial.  Given the marginal difference in performance and the overfitting protection on the after model, the after model is deemed the better of the two.\n",
+    "However as outlined above, the before model began to show signs of overfitting at around the 10th epoch, while the after model did not.  Based on the analysis and discussion above, the conclusion is that placing the Batch Normalization layer after the Activation layer proved to be beneficial.  Given the marginal difference in performance and the overfitting protection in the after model, the after model is deemed the better of the two.\n",
     "\n",
     "\n",
     "**Hyperparamter Tuning**\n",
     "\n",
-    "Hyperparameter tuning, varying the momentum parameter, provided some insight into how momentum impacted the model's performance.  The total difference in performance across the four different momentum values resulted in a maximum accuracy difference of .56%.  The middle two momentum values (.75 and .50) resulted in the .56% difference in accuracy.\n",
-    "When considering the accurracies and accuracy climb rates are essentially identical, the deciding factor comes dowm to the vaiability in the  accuracy paths. Given that Model 4 with momentum of .25 exhibited the least amount of variabily, Model 4 is considered the most stable and therefore deemed the best model of the four."
+    "Hyperparameter tuning, varying the momentum parameter, provided some insight into how momentum impacted the model's performance.  The total difference in performance across the four different momentum values resulted in a maximum accuracy difference of .56%.  The middle two momentum values (.75 and .50) resulted in a .56% difference in accuracy.\n",
+    "\n",
+    "When considering that the accurracies and accuracy trajectories are essentially identical, the deciding factor comes dowm to the variability in the accuracy paths. Given that Model 4, momentum of .25, exhibited the least amount of  variability, Model 4 is considered the most stable and therefore deemed the best model of the four."
    ]
   },
   {
